--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 language: python
+
+virtualenv:
+  system_site_packages: true
+
 # This (sudo: false) is needed to "run on container-based infrastructure" on
 # which cache: is available
 # http://docs.travis-ci.com/user/workers/container-based-infrastructure/
@@ -12,7 +16,7 @@ before_install:
   - export PATH=/usr/bin/:$PATH
 
 script:
-    - sudo python setup.py sdist install --record files.txt
-    - cat files.txt | xargs sudo rm -rf
-    - sudo python setup.py bdist_egg
-    - easy_install dist/*.egg
+  # The installation is run in the virtual env
+  # Required to explicitly activate it
+  - source $HOME/virtualenv/python2.7_with_system_site_packages/bin/activate
+  - ./travis-build
